welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:24: error: ';' expected but 'while' found.
poseBiscuit()while(estSurBiscuit()==false){recule();}
             ^Balin:31: error: ';' expected but 'while' found.
poseBiscuit()while(estSurBiscuit()==false){recule();}
             ^Balin:38: error: ';' expected but 'while' found.
poseBiscuit()while(estSurBiscuit()==false){recule();}
             ^Balin:45: error: ';' expected but 'while' found.
poseBiscuit()while(estSurBiscuit()==false){recule();}
             ^Balin:52: error: ';' expected but 'while' found.
poseBiscuit()while(estSurBiscuit()==false){recule();}
             ^Balin:59: error: ';' expected but 'while' found.
poseBiscuit()while(estSurBiscuit()==false){recule();}
             ^Balin:66: error: ';' expected but 'while' found.
poseBiscuit()while(estSurBiscuit()==false){recule();}
             ^Balin:73: error: ';' expected but 'while' found.
poseBiscuit()while(estSurBiscuit()==false){recule();}
             ^