welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()
while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()
while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()while(estSurBiscuit()==false){recule();}
prendBiscuit()
avance()
avance()
avance()
avance()
avance()
poseBiscuit()